--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: OPI∙Lab
 description: >
-  OPI∙Lab: Laboratorio de óptica y procesamiento de imágenes.
+  OPI∙Lab: Image Processing and Optics Lab.
   
 # Sómos un l
 # We are an applied optics and image processing lab focused on
